Release (2011-04-13)
------------------------------------
* 将组件的加载js修改为xxx-min.js