@@ -1,0 +1,15 @@
+/**
+ * @class Label
+ * @namespace Abstract
+ * @extends Component
+ * @author 牛佳庆
+ */
+ 
+ 
+/**
+ * <p>渲染</p> 
+ * <p>回调函数function(value,record,name){return value}</p>
+ * <p>返回值value是html字符串</p>
+ * @property renderer
+ * @type Function
+ */
