@@ -1,3 +1,9 @@
-Release (2011-04-13)
+Release ()
 ------------------------------------
 * 将组件的加载js修改为xxx-min.js
+* 增加Label至AuroraTagDocument
+
+
+Release (2011-04-12)
+------------------------------------
+* 修改没有grid组件的页面第一次打开lov无法查询的bug
